# postmarketos-welcome-gtk3

./: meson.build  org.postmarketos.Welcome.json
data/: meson.build  org.postmarketos.Welcome.appdata.xml.in  org.postmarketos.Welcome.desktop.in  org.postmarketos.Welcome.gschema.xml  welcome-message
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  postmarketos_welcome-window.c  postmarketos_welcome-window.h  postmarketos_welcome-window.ui  postmarketos_welcome.gresource.xml
